<resources>
    <string name="app_name">Meetdesk</string>
    <string name="action_settings">Settings</string>
    <!--<string name="google_api_key">AIzaSyBZYpDQ3jxjz4-Icq6ISkcCvUS9lbjgdF4</string>-->
    <string name="server_client_id">271250144661-h5tsjlnpr47j594rguu3t2qde6dqitk7.apps.googleusercontent.com</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_intro">Intro</string>

    <string name="base_no_internet">You have no internet connection</string>
    <string name="base_null_json">Something wrong with your internet</string>

    <string name="facebook_app_id">331771153868576</string>
    <string name="fb_login_protocol_scheme">fb331771153868576</string>

    <string name="fragment_detail_wifi">Wifi</string>
    <string name="fragment_detail_phone">Phone Numbers</string>
    <string name="fragment_detail_parking">Parking</string>
    <string name="fragment_detail_reviews">Reviews</string>
    <string name="fragment_detail_next_step">Next Step</string>
    <string name="fragment_detail_package_select">Select</string>
    <string name="fragment_payment_pay">Pay</string>
    <string name="fragment_payment_member_info">Member Info</string>
    <string name="fragment_payment_book_review">Booking Review</string>
    <string name="fragment_payment_phone_number">Phone Number</string>
    <string name="fragment_payment_title_detail_caption">Your Payment</string>
    <string name="title_activity_activity_auth">Authentication</string>
    <string name="fragment_rentout_caption_email">Email</string>
    <string name="fragment_rentout_caption_address">Address</string>
    <string name="fragment_rentout_caption_phone">Phone Number</string>
    <string name="fragment_rentout_caption_name">Merchant Name</string>
    <string name="fragment_rentout_caption_amenities">Amenities</string>
    <string name="fragment_rentout_caption_space_detail">Space Detail</string>
    <string name="fragment_rentout_caption_message">Message</string>
    <string name="fragment_profile_caption_edit">Edit Profile</string>
    <string name="fragment_profile_caption_about">About</string>
    <string name="fragment_profile_edit_caption_fullname">Fullname</string>
    <string name="fragment_profile_edit_caption_email">Email</string>
    <string name="fragment_profile_edit_caption_password">Password</string>
    <string name="fragment_profile_edit_caption_birthdate">Birthday</string>
    <string name="fragment_profile_edit_caption_gender">Gender</string>
    <string name="fragment_profile_edit_caption_phone">Phone</string>
    <string name="fragment_profile_edit_caption_location">Location</string>
    <string name="fragment_profile_edit_caption_about">About</string>
    <string name="fragment_booking_form_select_date_from">Date Start</string>
    <string name="fragment_booking_form_select_date_to">Date End</string>
    <string name="fragment_booking_form_select_hour_from">Hour Start</string>
    <string name="fragment_booking_form_select_hour_to">Hour End</string>
    <string name="fragment_booking_form_caption_quota">Quota</string>
    <string name="fragment_booking_form_caption_quota_person">Person</string>
    <string name="fragment_booking_form_caption_unit">Unit</string>
    <string name="fragment_booking_form_caption_check_availability">Check Availability</string>
    <string name="fragment_booking_form_caption_next">Next</string>
    <string name="fragment_booking_review_caption_book">Book Now</string>
    <string name="fragment_booking_thanks_caption_title">Thank You For Booking With Us</string>
    <string name="fragment_booking_thanks_desc">Thank you for your booked. You will receive a message from the tenant for more information.</string>
    <string name="fragment_booking_thanks_back_home">Back to Home</string>
    <string name="fragment_confirmation_field_caption_fullname">Invoice Number</string>
    <string name="fragment_confirmation_field_caption_price">Total Price</string>
    <string name="fragment_confirmation_field_caption_date">Payment Date</string>
    <string name="fragment_confirmation_field_caption_payment_method">Payment Method</string>
    <string name="fragment_confirmation_field_caption_from">From Account</string>
    <string name="fragment_confirmation_field_caption_destination">Destination Account</string>
    <string name="fragment_confirmation_field_caption_desc">Description</string>
    <string name="fragment_confirmation_field_caption_upload">Upload Proof of Payment</string>
    <string name="fragment_confirmation_field_caption_attachment">Attachment</string>

    <string name="dialog_confirm_title">Exit Application</string>
    <string name="dialog_confirm_yes">Yes</string>
    <string name="dialog_confirm_no">No</string>

    <string name="help_about_copyright">&#169; 2016 Meetdesk.id</string>
    <string name="help_about_reserved">All rights reserved.</string>
    <string name="help_contact_message_hint">Please describe your problem</string>
    <string name="help_contact_submit">Submit</string>
    <string name="profile_edit_save">Save Profile</string>
    <string name="inbox_new_create_hint">Write a message..</string>
    <string name="wishlist_edit">Edit</string>
    <string name="wishlist_detail">Detail Space</string>
    <string name="wishlist_remove">Remove from wishlist</string>
    <string name="hotlist_detail">Detail Space</string>
    <string name="transaction_edit">Edit</string>
    <string name="pagetitle_help">Help</string>
    <string name="pagetitle_wishlist">Room Wish List</string>
    <string name="pagetitle_hotlist">Hot List</string>
    <string name="pagetitle_detail">Detail</string>
    <string name="pagetitle_settings">Settings</string>
    <string name="pagetitle_contact">Contact</string>
    <string name="pagetitle_inbox">Inbox</string>
    <string name="pagetitle_inbox_new">New Message</string>
    <string name="pagetitle_transaction">Transaction</string>
    <string name="pagetitle_booking">Booking</string>
    <string name="pagetitle_booking_form">Booking Form</string>
    <string name="pagetitle_booking_review">Booking Review</string>
    <string name="pagetitle_payment">Payment</string>
    <string name="pagetitle_payment_method">Payment Method</string>
    <string name="pagetitle_profile">Profile</string>
    <string name="pagetitle_profile_edit">Edit Profile</string>
    <string name="pagetitle_req_merchant">Rent Out Space</string>
    <string name="pagetitle_select_type">Select Space</string>
    <string name="pagetitle_booking_thanks">Thank You</string>
    <string name="pagetitle_confirmation">Confirmation</string>
    <string name="title_activity_activity_receiver">ActivityReceiver</string>
</resources>
