<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient_splash">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <ImageView
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:id="@+id/help_about_logo"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/app_name"
            android:scaleType="centerInside"
            android:src="@drawable/logo_white_256"
            android:layout_marginBottom="10dp"/>

        <com.meetdesk.view.UIText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/base_white"
            android:textSize="16sp"
            android:id="@+id/help_about_version"
            android:layout_marginBottom="30dp"/>


        <com.meetdesk.view.UIText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/base_white"
            android:textSize="14sp"
            android:text="@string/help_about_copyright"
            android:id="@+id/help_about_copy" />

        <com.meetdesk.view.UIText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/base_white"
            android:textSize="14sp"
            android:text="@string/help_about_reserved"
            android:id="@+id/help_about_reserved"/>



    </LinearLayout>

</RelativeLayout>
