<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/base_white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/base_blue"
        android:id="@+id/fragment_booking_thanks_topbar">

        <ImageButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/icon_back_white"
            android:scaleType="centerInside"
            android:layout_alignParentLeft="true"
            android:contentDescription="@string/app_name"
            android:layout_centerVertical="true"
            android:padding="7dp"
            android:layout_marginLeft="10dp"
            android:background="@android:color/transparent"
            android:adjustViewBounds="true"
            android:id="@+id/fragment_booking_thanks_back"
            android:visibility="gone" />

        <com.meetdesk.view.UIText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/base_white"
            android:layout_centerInParent="true"
            app:fontType="bold"
            android:text="@string/pagetitle_booking_thanks"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:orientation="vertical"
            android:layout_centerHorizontal="true">

            <com.meetdesk.view.UIText
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:textSize="28sp"
                android:textColor="@color/base_text_normal"
                android:text="@string/fragment_booking_thanks_caption_title"
                android:textAllCaps="true"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="15dp"
                android:gravity="center_horizontal"
                app:fontType="bold"
                android:layout_gravity="center_horizontal"/>

            <ImageView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/app_name"
                android:scaleType="centerInside"
                android:src="@drawable/icon_check_blue"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="15dp"/>
            
            <com.meetdesk.view.UIText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/base_black"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:textSize="14sp"
                android:gravity="center_horizontal"
                android:text="@string/fragment_booking_thanks_desc"
                android:layout_marginBottom="20dp"/>

            <com.meetdesk.view.UIButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/base_white"
                android:id="@+id/fragment_booking_thanks_back_home"
                android:background="@drawable/bg_rounded_blue"
                android:text="@string/fragment_booking_thanks_back_home"/>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>