<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/base_white">

    <com.meetdesk.view.UIText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textColor="@color/base_blue"
        android:textSize="17sp"
        android:paddingTop="10dp"
        android:text="@string/dialog_confirm_title"
        android:paddingBottom="10dp"
        android:id="@+id/view_dialog_confirm_title"
        android:background="@drawable/border_bottom_blue"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <com.meetdesk.view.UIText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/base_text_normal"
            android:textSize="15sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="15dp"
            android:id="@+id/view_dialog_confirm_message"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">

            <com.meetdesk.view.UIButton
                android:layout_width="90dp"
                android:layout_height="35dp"
                android:textColor="@color/base_black"
                android:background="@android:color/transparent"
                android:text="@string/dialog_confirm_no"
                android:textSize="15sp"
                android:id="@+id/view_dialog_confirm_no"/>

            <com.meetdesk.view.UIButton
                android:layout_width="90dp"
                android:layout_height="35dp"
                android:textColor="@color/base_black"
                android:background="@android:color/transparent"
                android:text="@string/dialog_confirm_yes"
                android:textSize="15sp"
                android:id="@+id/view_dialog_confirm_yes"/>

        </LinearLayout>


    </LinearLayout>

</LinearLayout>