<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="15dp"
    android:descendantFocusability="blocksDescendants">

    <ImageView
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:contentDescription="@string/app_name"
        android:id="@+id/item_wishlist_image"
        android:layout_marginRight="15dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:background="@drawable/border_bottom_white_old">

        <com.meetdesk.view.UIText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/base_black"
            android:textSize="16sp"
            android:id="@+id/item_wishlist_title"/>

        <com.meetdesk.view.UIText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/base_text_normal"
            android:textSize="14sp"
            android:id="@+id/item_wishlist_desc"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.meetdesk.view.UIButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/base_blue"
                android:textSize="13sp"
                android:layout_alignParentLeft="true"
                android:background="@android:color/transparent"
                android:textAllCaps="false"
                android:text="@string/wishlist_detail"
                android:layout_centerVertical="true"
                android:id="@+id/item_wishlist_detail"/>

            <com.meetdesk.view.UIButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/base_red"
                android:textSize="13sp"
                android:layout_alignParentRight="true"
                android:background="@android:color/transparent"
                android:id="@+id/item_wishlist_remove"
                android:textAllCaps="false"
                android:text="@string/wishlist_remove"
                android:visibility="gone"/>

        </RelativeLayout>

    </LinearLayout>




</LinearLayout>