<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/base_white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/base_blue"
        android:id="@+id/transaction_topbar">

        <ImageButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/icon_back_white"
            android:scaleType="centerInside"
            android:layout_alignParentLeft="true"
            android:contentDescription="@string/app_name"
            android:layout_centerVertical="true"
            android:padding="7dp"
            android:layout_marginLeft="10dp"
            android:background="@android:color/transparent"
            android:adjustViewBounds="true"
            android:id="@+id/transaction_imagebutton_back"/>

        <com.meetdesk.view.UIText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/base_white"
            android:layout_centerInParent="true"
            app:fontType="bold"
            android:text="@string/pagetitle_transaction"/>

        <com.meetdesk.view.UIButton
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:textColor="@color/base_white"
            android:textSize="14sp"
            android:text="@string/transaction_edit"
            android:layout_alignParentRight="true"
            android:background="@android:color/transparent"
            android:layout_centerVertical="true"
            android:id="@+id/transaction_button_edit"
            android:visibility="gone"/>

    </RelativeLayout>

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TabLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_top_blue_darker"
            app:tabBackground="@drawable/selector_transaction_tab"
            app:tabMode="fixed"
            app:tabGravity="fill"
            android:paddingTop="1dp"
            app:tabIndicatorColor="@android:color/transparent"
            app:tabIndicatorHeight="0dp"
            android:id="@+id/transaction_tab"/>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/transaction_viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"  />

</LinearLayout>